--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/users/edit">Edit</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/users/sign_out">Sign Out</a>
+          <%= link_to 'Sign Out', '/users/sign_out', method: :delete %>
+          <!-- <a class="dropdown-item" href="/users/sign_out">Sign Out</a> -->
         </div>
       </li>
       <% else %>
