--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,12 +12,12 @@
       <% if current_user %>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          User Settings
+          User Actions
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/users/edit">Edit</a>
           <div class="dropdown-divider"></div>
-          <%= link_to 'Sign Out', '/users/sign_out', method: :delete %>
+          <div class="dropdown-item"><%= link_to 'Sign Out', '/users/sign_out', method: :delete %></div>
           <!-- <a class="dropdown-item" href="/users/sign_out">Sign Out</a> -->
         </div>
       </li>
@@ -31,8 +31,8 @@
       </li> -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Enter a location" aria-label="Change Location">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Change Location</button>
     </form>
   </div>
 </nav>
