--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,10 @@
         <td><%= problem.target_completion_date %></td>
         <td><%= problem.user.username %></td>
         <td><%= link_to 'Show', problem %></td>
+        <% if current_user == problem.user %>
         <td><%= link_to 'Edit', edit_problem_path(problem) %></td>
         <td><%= link_to 'Destroy', problem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
