--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
-<h4>Currently active zip code:  <%= @zipcode %> </h4>
+
 
 <br/>
 
 
+<h4>Problems Near Me</h4>
+<h5>Currently active zip code:  <%= @zipcode %> </h5>
 <table>
   <thead>
     <tr>
@@ -11,6 +13,7 @@
       <th>Location</th>
       <th>Target completion date</th>
       <th>User</th>
+      <th>Role</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,13 +29,27 @@
         <td><%= link_to 'Show', problem %></td>
         <% if current_user == problem.user %>
         <td><%= link_to 'Edit', edit_problem_path(problem) %></td>
-        <td><%= link_to 'Destroy', problem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', problem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+
+<% if current_user %>
+  <div class="my-problems">
+  <h4>My Problems</h4>
+    <% @roles.each do |role| %>
+      <p>Problem Name: <%= role.problem.title %></p>
+      <p>Problem Role: <%= role.role_level %></p>
+    <% end %>
+  </div>
+<% end %>
+
+<br>
+<br>
+<h4> Links </h4>
 <br>
 
 <%= link_to 'New Problem', new_problem_path %>
