--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,9 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <% if current_user %>
+      <li class="nav-item">
+        <a class="nav-link" href="/my_problems">My Problems</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           User Actions
@@ -32,7 +35,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Enter a location" aria-label="Change Location">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Change Location</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" heref="/">Change Location</button>
     </form>
   </div>
 </nav>
