you can now follow and unfollow problems

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,6 +6,8 @@
     <%= f.input :content %>
   </div>
 
+  <% binding.pry %>
+
     <%= f.hidden_field :problem_id, :value => params[:problem][:problem_id] %>
 
   <div class="form-actions">
