--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 
 <h4>Problems Near Me</h4>
-<h5>Currently active zip code:  <%= @zipcode %> </h5>
+<h5>Currently active zip code:  <%= current_user.zip %> </h5>
 <table>
   <thead>
     <tr>
