--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,9 +33,16 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li> -->
     </ul>
+
+
+
+
+
+
+    <!-- QUESTION FOR @arren - what I want to do here is for the submit action to reload "/" while also adding the contents of the form as a "set_location=" query param- what do I need to do to make that happen? Sorry if this is a dumb/basic question, I'm embarrassingly new to the front end side of things. I've been out of the loop too long, time to fix that haha -->
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Enter a location" aria-label="Change Location">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" heref="/">Change Location</button>
+      <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a location" aria-label="Change Location">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="/">Change Location</button>
     </form>
   </div>
 </nav>
