--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,9 +6,11 @@
     <%= f.input :content %>
   </div>
 
-  <% binding.pry %>
-
-    <%= f.hidden_field :problem_id, :value => params[:problem][:problem_id] %>
+    <% if params[:problem] %>
+      <%= f.hidden_field :problem_id, :value => params[:problem][:problem_id] %>
+    <% elsif params[:milestone] %>
+      <%= f.hidden_field :milestone_id, :value => params[:milestone][:milestone_id] %>
+    <% end %>
 
   <div class="form-actions">
     <%= f.button :submit %>
