--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -7,9 +7,9 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Location</th>
+      <th>Zip</th>
       <th>Target completion date</th>
-      <th>User</th>
+      <th>Leader</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,12 +19,14 @@
       <tr>
         <td><%= problem.title %></td>
         <td><%= problem.description %></td>
-        <td><%= problem.location %></td>
+        <td><%= problem.zip %></td>
         <td><%= problem.target_completion_date %></td>
         <td><%= problem.user.username %></td>
         <td><%= link_to 'Show', problem %></td>
+        <% if current_user == problem.user %>
         <td><%= link_to 'Edit', edit_problem_path(problem) %></td>
         <td><%= link_to 'Destroy', problem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
