--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -6,7 +6,11 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
+    <%= f.input :category %>
+    <%= f.input :subcategory %>
+    <%= f.input :participants_required %>
     <%= f.input :target_completion_date, as: :date %>
+    <%= f.input :address %>
     <%= f.input :zip %>
     <%= f.input :city %>
     <%= f.input :state %>
