posts are working, next we need to get comments working again

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,20 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
+    <%= f.input :title %>
   </div>
+
+  <div class="form-inputs">
+    <%= f.input :content %>
+  </div>
+
+    <% if params[:problem] %>
+      <%= f.hidden_field :postable_id, :value => params[:problem][:problem_id] %>
+      <%= f.hidden_field :postable_type, :value => 'Problem' %>
+    <% elsif params[:milestone] %>
+      <%= f.hidden_field :postable_id, :value => params[:milestone][:milestone_id] %>
+      <%= f.hidden_field :postable_type, :value => 'Milestone' %>
+    <% end %>
 
   <div class="form-actions">
     <%= f.button :submit %>
