--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,10 +6,8 @@
     <%= f.input :content %>
   </div>
 
-    <% if params[:problem] %>
-      <%= f.hidden_field :problem_id, :value => params[:problem][:problem_id] %>
-    <% elsif params[:milestone] %>
-      <%= f.hidden_field :milestone_id, :value => params[:milestone][:milestone_id] %>
+    <% if params[:post] %>
+      <%= f.hidden_field :post_id, :value => params[:post][:post_id] %>
     <% end %>
 
   <div class="form-actions">
