--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+
+
+<% if @post.user_has_permissions(current_user.id) %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<% end %>
+<%= link_to 'Back', @parent %>
