--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<h2><%= @post.title %></h2>
+<h5><%= @post.content %></h5>
 
 
 <% if @post.user_has_permissions(current_user.id) %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to 'Edit', edit_post_path(@post) %>  |  
+<%= link_to 'Delete post', @post, method: :delete, data: { confirm: 'Are you sure?' }  %>  |  
 <% end %>
 <%= link_to 'Back', @parent %>
