--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', milestone: @milestone %>
 
 <%= link_to 'Show', @milestone %> |
-<%= link_to 'Back', milestones_path %>
+<%= link_to 'Back', :back %>
