--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Admin:</strong>
-  <%= @problem.user.email %>
+  <%= @problem.user.username %>
 </p>
 
 
@@ -40,9 +40,10 @@
 
 <% @problem.milestones.each do |milestone| %>
 <p>
-    Title: <%= milestone.title %> <br>
+    Title: <%= milestone.title %>  |  Show milestone: <%= link_to 'Milestone', milestone %> <br>
     Current Status: <%= milestone.current_status %> <br>
     Complete: <%= milestone.complete %> <br>
+    Current/Needed Participants: <%= milestone.participants_required %> <br>
     <% if @role && @role.level <= 2 %>
         <%= link_to 'Edit', edit_milestone_path(milestone) %> ||
         <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' } %>
