modals work! very exciting

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
     <%= favicon_link_tag asset_path('favicon.ico') %>
   </head>
 
+  <div id="modal-holder"></div>
+
+
   <body>
     <%= render 'layouts/navbar' %>
     <%= render 'layouts/alerts' %>
