--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -53,7 +53,9 @@
 <%end%>
 
 <% if @role && @role.level <= 2 %>
-<%= link_to 'Create a Milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}) %>
+
+<%= link_to 'Create a milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-outline-success my-2 my-sm-0', data: { modal: true } %>
+
 <% end %>
 
 <p>----------------------------------------</p>
