add landing page for unauthenticated users

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Just Be Human</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
     <!-- QUESTION FOR @arren - what I want to do here is for the submit action to reload "/" while also adding the contents of the form as a "set_location=" query param- what do I need to do to make that happen? Sorry if this is a dumb/basic question, I'm embarrassingly new to the front end side of things. I've been out of the loop too long, time to fix that haha -->
     <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
       <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a location" aria-label="Change Location">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="/">Change Location</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="/">NOT WORKING</button>
     </form>
   </div>
 </nav>
