add landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,1 +1,24 @@
-This is the landing page!
+<div class="jumbotron">
+  <h1 class="display-3">Welcome to <Strong>Just Be Human</Strong></h1>
+  <p class="lead">Thank you for checking out what we're building!</p>
+  <hr class="my-4">
+  <p><Strong>What is Just Be Human?</Strong>
+    <br>
+    Just Be Human is project management software for crowd-sourced volunteerism. Put more simply, it is a way for people to define, communicate about, and solve problems in their community!
+    <br>
+    <br>
+    <Strong>How do I use it?</Strong>
+    <br>
+
+    You start by defining the problem you want to solve. It can be anything! Let's say it's picking up trash in your neighborhood, or doing some maintenance work in a neighborhood park, or getting a safety hazard like a pothole or dangerous sidewalk fixed.
+    <br>
+    <br>
+    Once you have defined the problem, you set a due date and then define the milestones that must be met before the overall problem can be solved. Just Be Human allows you to define these milestones (which can be thought of as sub-problems) and then opens them up for people to volunteer to help!
+    <br>
+    <br>
+    What we do is give you a platform to discuss the problem, define it in detail, track your team's progress over time to help make sure that your goals are achieved!
+  </p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Sign In/Sign Up</a>
+  </p>
+</div>
