--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -19,6 +19,6 @@
     What we do is give you a platform to discuss the problem, define it in detail, track your team's progress over time to help make sure that your goals are achieved!
   </p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Sign In/Sign Up</a>
+    <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Sign In/Register</a>
   </p>
 </div>
