--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
       </li>
       <% else %>
       <li class="nav-item">
-        <a class="nav-link" href="/users/sign_in">Sign In/Sign Up</a>
+        <a class="nav-link" href="/users/sign_in">Sign In/Register</a>
       </li>
       <% end %>
 <!--       <li class="nav-item">
