add the footer and improve the landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
   <body>
     <%= render 'layouts/navbar' %>
     <%= render 'layouts/alerts' %>
+
     <%= yield %>
   </body>
+
+  <%= render 'layouts/footer' %>
 </html>
