--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -16,7 +16,16 @@
     Once you have defined the problem, you set a due date and then define the milestones that must be met before the overall problem can be solved. Just Be Human allows you to define these milestones (which can be thought of as sub-problems) and then opens them up for people to volunteer to help!
     <br>
     <br>
-    What we do is give you a platform to discuss the problem, define it in detail, track your team's progress over time to help make sure that your goals are achieved!
+    What we do is give you a platform to discuss the problem, define it in detail, and track your team's progress over time to help make sure that your community's problem gets solved!
+
+    <br>
+    <br>
+    <Strong>Why?</Strong>
+    <br>
+    Just Be Human is founded on the premise that there are currently a lot of people who feel the desire to do something to help their community but just aren't sure where to start. There are a lot of us who see small, entirely solvable problems in our community on a daily basis and think "someone should do something about that." This platform is designed to help that person become that "someone".
+    <br>
+    <br>
+    There is not a good way for groups of people to organize themselves to solve prolems in their community- local government is too slow and cumbersome and neighborhood discussion boards do not have a good way to track the progress of tasks over time. Just Be Human is designed to help hold neighbors accountable to each other to solve problems that would've otherwise continued.
   </p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Sign In/Register</a>
