gotta add some routes and methods to pages controller

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -27,16 +27,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">View Month-to-date Costs</a>
+            <a href="/costs">View Month-to-date Costs</a>
           </li>
           <li>
-            <a href="#!">Donate!</a>
+            <a href="/donate">Donate!</a>
           </li>
           <li>
-            <a href="#!">I'd like to help!</a>
+            <a href="/help">I'd like to help!</a>
           </li>
           <li>
-            <a href="#!">Learn more about us</a>
+            <a href="/aboutus">Learn more about us</a>
           </li>
 
         </ul>
