get about us, costs, donation, and help pages scaffolded out

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is operated by Just Being Human, a 501(c)3 tax-exempt nonprofit that is entirely funded by donations. If you would like to make a donation and help keep the lights on in my apartment while I build the website, you can do so at the links to the right. If you would like to read more about us- where we came from, where we're going, and what we want to do going forward, you can also find that information here. </p>
+        <p>Just Be Human is operated by Just Being Human, a 501(c)3 nonprofit that is entirely funded by donations. If you would like to make a donation and help keep the lights on in my apartment while I build this platform, you can do so in the links to the right. If you would like to read more about Just Being Human- where we came from, where we're going, and why we're doing this, you can also find that information here. </p>
 
       </div>
       <!-- Grid column -->
