--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -11,9 +11,7 @@
     <%= f.input :participants_required %>
     <%= f.input :target_completion_date, as: :date %>
     <%= f.input :address %>
-    <%= f.input :zip %>
-    <%= f.input :city %>
-    <%= f.input :state %>
+    <%= f.input :postal_code %>
     <%= f.input :country %>
   </div>
 
