--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -136,4 +136,4 @@
 <br>
 <br>
 <p>----------------------------------------</p>
-<%= link_to 'Back to problems list', problems_path %>
+<%= link_to 'Back', :back %>
