sticky fucking footer still isn't working but I've got the show page for problems looking way better

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,28 @@
 @import "tether";
 
 //*= require introjs
+
+
+
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  postiion: absolute;
+  /* This is the same as the height of the footer */
+  margin-bottom: -15rem; 
+}
+
+
+
+/* The height of the footer and push must be the same */
+.footer,
+.push {
+  height: 15rem;
+  position: relative;
+}
