--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -26,8 +26,14 @@
     <br>
     <br>
     There is not a good way for groups of people to organize themselves to solve prolems in their community- local government is too slow and cumbersome and neighborhood discussion boards do not have a good way to track the progress of tasks over time. Just Be Human is designed to help hold neighbors accountable to each other to solve problems that would've otherwise continued.
+    <br>
+    <br>
+    <Strong>Why does your website look so terrible?</Strong>
+    <br>
+    I'm a back-end developer by training, so I'm having to learn an entirely different side of software development to actually build something that doesn't make people physically uncomfortable to look at. I've got someone coming in to help though!
   </p>
+  <br>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Sign In/Register</a>
+    <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start solving problems!</a>
   </p>
 </div>
