--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,6 +31,7 @@
     <script>
       var map;
       var assignListener = function(markerObj, infoWindowObj){
+        console.log('Clicked on a marker')
         return function() {
                infoWindowObj.open(map, markerObj);
                 };
