--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,139 +1,179 @@
-<div class='problem-metadata'>
-  <h1>Problem Information</h1>
-  <p>
-    <strong>Title:</strong>
-    <%= @problem.title %>
-  </p>
+  <head>
+    <!-- This page is copyright Elated Communications Ltd. (www.elated.com) -->
 
-  <p>
-    <strong>Description:</strong>
-    <%= @problem.description %>
-  </p>
+    <title>JavaScript tabs example</title>
 
-  <p>
-    <strong>Target completion date:</strong>
-    <%= @problem.target_completion_date %>
-  </p>
+<!--     <style type="text/css">
+      body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }
+      ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
+      ul#tabs li { display: inline; }
+      ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
+      ul#tabs li a:hover { background-color: #f1f0ee; }
+      ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
+      div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
+      div.tabContent.hide { display: none; }
+    </style> -->
 
-  <p>
-    <strong>Admin:</strong>
-    <%= @problem.user.username %>
-  </p>
+    <script type="text/javascript">
+    //<![CDATA[
+
+      function openTab(evt, cityName) {
+        // Declare all variables
+        var i, tabcontent, tablinks;
+
+        // Get all elements with class="tabcontent" and hide them
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+          tabcontent[i].style.display = "none";
+        }
+
+        // Get all elements with class="tablinks" and remove the class "active"
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i = 0; i < tablinks.length; i++) {
+          tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+
+        // Show the current tab, and add an "active" class to the button that opened the tab
+        document.getElementById(cityName).style.display = "block";
+        evt.currentTarget.className += " active";
+      }
 
 
-  <p>
-    <strong>Follower count:</strong>
-    <%= @problem.follower_count %>
-  </p>
+      function init() {
+        document.getElementById("defaultOpen").click();
+      }
+    //]]>
+    </script>
+  </head>
 
-  <p>
-    <strong>Current Participant Count / Target Participant Count:</strong>
-    <%= @problem.participant_count %> / <%= @problem.participants_required %>
-  </p>
-</div>
+  <body onload="init()">
+    <h1> <%= @problem.title %> </h1>
+    <div class="tab">
+      <button class="tablinks" onclick="openTab(event, 'problem-info-tab')" id="defaultOpen">General Problem Info</button>
+      <button class="tablinks" onclick="openTab(event, 'problem-milestones-tab')">Milestones and Progress</button>
+      <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Volunteers and Followers</button>
+    </div>
 
-<p>----------------------------------------</p>
-<br>
-<br>
-<br>
-<p>----------------------------------------</p>
-<h2>Milestones</h2>
+    <script>
+      // Get the element with id="defaultOpen" and click on it
+      
+    </script>
+    <!-- Tab content -->
+    <div id="problem-info-tab" class="tabcontent">
+      <div class="tabTitle"><h2>Problem Information</h2></div>
+      <h5>
+        <strong>Title:</strong>
+        <%= @problem.title %>
+      </h5>
 
-<% @problem.milestones.each do |milestone| %>
-<p>
-    <Strong>Title:</Strong> <%= milestone.title %><br>
-    <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
-    <Strong>Complete:</Strong> <%= milestone.complete %> <br>
-    <Strong>Current/Needed Participants:</Strong> <%= milestone.participants_required %> <br>
-    
-      <div class="btn-group" role="group" aria-label="Admin Controls">
-        <%= link_to 'Show', milestone, class: 'btn btn-outline-success my-2 my-sm-0' %>
-        <% if @role && @role.level <= 2 %>
-        <%= link_to 'Edit', edit_milestone_path(milestone), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
-        <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
+      <h5>
+        <strong>Description:</strong>
+        <%= @problem.description %>
+      </h5>
+
+      <h5>
+        <strong>Target completion date:</strong>
+        <%= @problem.target_completion_date %>
+      </h5>
+
+      <h5>
+        <strong>Admin:</strong>
+        <%= @problem.user.username %>
+      </h5>
+
+
+      <h5>
+        <strong>Follower count:</strong>
+        <%= @problem.follower_count %>
+      </h5>
+
+      <h5>
+        <strong>Current Participant Count / Target Participant Count:</strong>
+        <%= @problem.participant_count %> / <%= @problem.participants_required %>
+      </h5>
+      <br>
+      <br>
+
+      <h2> Posts </h2>
+            <% @problem.posts.each do |post| %>
+              
+              <ul>
+                <div class="post-container">
+                  <p>Topic: <%= link_to "#{post.title}", post, class: 'btn btn-outline-info btn-lg' %></p>
+                  <% post_user = User.find(post.user_id) %>
+                  <p>Started By: <%= post_user.username %> at <%= post.created_at.strftime('%m/%d/%Y') %></p>
+                  <p># of responses: <%= post.comment_count %></p>
+                  <% if current_user == post_user || @problem.user_has_mod_permissions(current_user.id)%>
+                  <td>  |  <%= link_to 'Edit', edit_post_path(post) %>  |  </td>
+                  <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-failure my-2 my-sm-0' %></td>
+                  <% end %>
+                </div> 
+              </ul>
+
+            <% end %>
+          </tbody>
+        </table>
+
+        <% if current_user && @role %>
+        <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}) %>
         <% end %>
-      </div>
-    
-</p>
-<%end%>
 
-<% if @role && @role.level <= 2 %>
 
-<%= link_to 'Add a new milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-outline-success my-1 my-lg-0', data: { modal: true } %>
+    </div>
 
-<% end %>
+    <div id="problem-milestones-tab" class="tabcontent">
+      <h2>Milestones</h2>
 
-<p>----------------------------------------</p>
-<br>
-<br>
-<br>
-<p>----------------------------------------</p>
-<h3> POSTS </h3>
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
+      <% @problem.milestones.each do |milestone| %>
+      <p>
+          <Strong>Title:</Strong> <%= milestone.title %><br>
+          <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
+          <Strong>Complete:</Strong> <%= milestone.complete %> <br>
+          <Strong>Current/Needed Participants:</Strong> <%= milestone.participants_required %> <br>
+          
+            <div class="btn-group" role="group" aria-label="Admin Controls">
+              <%= link_to 'Show', milestone, class: 'btn btn-outline-success my-2 my-sm-0' %>
+              <% if @role && @role.level <= 2 %>
+              <%= link_to 'Edit', edit_milestone_path(milestone), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
+              <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
+              <% end %>
+            </div>
+          
+      </p>
+      <%end%>
 
-  <tbody>
-    <% @problem.posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-            <% post_user = User.find(post.user_id) %>
-        <td><%= post_user.username %></td>
-        <td><%= post.comment_count %></td>
-        <td><%= link_to 'Show', post %></td>
-        <% if current_user == post_user || current_user == @problem.user || (@role && @role.level <= 2)%>
-        <td>  |  <%= link_to 'Edit', edit_post_path(post) %>  |  </td>
-        <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-failure my-2 my-sm-0' %></td>
+      <% if @role && @role.level <= 2 %>
+
+      <%= link_to 'Add a new milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-outline-success my-1 my-lg-0', data: { modal: true } %>
+
+      <% end %>
+    </div>
+
+    <div id="problem-people-tab" class="tabcontent">
+      <h2>Followers</h2>
+      <% @problem.roles.each do |role| %>
+        <p>Username: <%= role.user.username %>  |  Role: <%= role.title %> 
+        <% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %> 
+        | <%= link_to 'Promote User', controller: "problems", action: "promote_user", problem_id: @problem.id, target_user_id: role.user.id %>
+        <% elsif (current_user == @problem.user) && (role.user != current_user) && role.level < 4 %>
+        | <%= link_to 'Demote User', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: role.user.id %>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        </p>
+      <% end %>
+    </div>
 
-<% if current_user && @role %>
-<%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}) %>
-<% end %>
-<p>----------------------------------------</p>
-<br>
-<br>
-<br>
-<p>----------------------------------------</p>
-<h4>Problem Administration Links</h4>
-<% if current_user == @problem.user %>
-<%= link_to 'Edit', edit_problem_path(@problem) %> | <%= link_to 'Delete', @problem, method: :delete, data: {:confirm => "Are you sure?"} %>
-<% end %>
-<% if !@role %>
-<%= link_to 'Follow Problem', controller: "problems", action: "follow", problem_id: @problem.id %>
-<% elsif @role.level == 4 %>
-<%= link_to 'Unfollow Problem', controller: "problems", action: "unfollow", problem_id: @problem.id %>
-<% elsif @role.level == 2 %>
-<%= link_to 'Step down as Supervisor', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: @role.user_id %>
-<% end %>
-<p>----------------------------------------</p>
-<br>
-<br>
-<br>
-<p>----------------------------------------</p>
-<
-<h5>Followers</h5>
-<% @problem.roles.each do |role| %>
-<p>Username: <%= role.user.username %></p>
-<p>Title: <%= role.title %> 
-<% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %> 
-| <%= link_to 'Promote User', controller: "problems", action: "promote_user", problem_id: @problem.id, target_user_id: role.user.id %>
-<% elsif (current_user == @problem.user) && (role.user != current_user) && role.level < 4 %>
-| <%= link_to 'Demote User', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: role.user.id %>
-<% end %>
-</p>
-  --------------------------
-<% end %>
 
-<br>
-<br>
-<p>----------------------------------------</p>
-<%= link_to 'Back', :back %>
+
+    <div class="tabContent" id="milestones">
+
+    </div>
+
+    <div class="tabContent" id="followers">
+
+    </div>
+
+    <p>
+      <%= link_to 'Back', :back, class: "btn btn-warning btn-lg" %>
+    </p>
+
+  </body>  
